    copying process are more confusing than interesting.
  * Fix apt-install to install packages in /target, not /.
  * Update the GTK interface much more frequently during the copying and
    configuration processes.
  * Fix various focus and default-dialog-action settings in the GTK
    interface.
  * Pad out the text in the debconf progress dialog a bit more.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2006 21:57:53 +0000

espresso (0.99.5) dapper; urgency=low

  * Add get_hostname and get_mountpoints methods to frontends so that
    components can get at them without the nasty vars file hack. Remove all
    code handling the vars file.
  * Build espresso in the binary-arch target. This time I've even tested it.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2006 20:55:29 +0000

espresso (0.99.4) dapper; urgency=low

  * Make espresso Architecture: any; it has different dependencies on
    different architectures.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2006 14:31:18 +0000

espresso (0.99.3) dapper; urgency=low

  * Fix stupid debian/rules thinko affecting powerpc.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2006 11:06:58 +0000

espresso (0.99.2) dapper; urgency=low

  * Fix cpio arguments.
  * Drop espresso-yaboot dependency on powerpc for now, until it exists.
  * Drop obsolete dependency on zenity.
  * Convert debconffilter to use subprocess.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2006 10:48:09 +0000

espresso (0.99.1) dapper; urgency=low

  * Rename to espresso to avoid confusion caused by somebody other than
    Ubuntu being upstream for a project called "Ubuntu ...", to reduce
    awkward branding considerations, and to clearly separate the work being
    done on this project for Dapper from the work done by Guadalinex since
    the focus is rather different.
  * Change Maintainer to me.
  * Rename lib directory in source to espresso so that pychecker can be used
    more easily.